feat: sync send event
Signed-off-by: delu <delu.xu@linkall.com>